--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "tristan-wedding",
-  "description": "Tristan Yang's wedding site",
+  "name": "kt-wedding",
+  "description": "Kien Thuc's wedding site",
   "version": "1.1.0",
-  "author": "Tristan",
-  "homepage": "https://wedding.yangerxiao.com",
+  "author": "Thuc Tran",
+  "homepage": "http://wedding.tdk.best/",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "confetti-react": "^2.5.0",
