--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Kien Thuc's wedding site",
   "version": "1.1.0",
   "author": "Thuc Tran",
-  "homepage": "http://wedding.tdk.best/",
+  "homepage": "http://wedding.tdk.best",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "confetti-react": "^2.5.0",
