--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "confetti-react": "^2.5.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.13.2",
     "gatsby": "^5.12.4",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-baidu-analytics": "^2.2.0",
