--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-lazyload": "^3.2.1",
     "styled-components": "^6.0.8",
     "styled-reset": "^4.5.1",
     "typed.js": "^2.0.16"
