--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-offline": "^6.12.0",
     "gatsby-plugin-styled-components": "^6.12.0",
     "lightgallery": "^2.7.2",
+    "loadable-image": "^3.2.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
